# rust-os

./: .gitignore  Cargo.toml
.cargo/: config.toml
drivers/: Cargo.toml
drivers/src/: display.rs  lib.rs
drivers/src/bus/: pci.rs
drivers/src/bus/pci/: configuration_address.rs  configuration_space.rs  inner.rs
drivers/src/display/: vga_buffer.rs
drivers/src/display/frame_buffer/: constants.rs  macros.rs
drivers/src/display/vga_buffer/: char.rs  macros.rs  tests.rs  writer.rs
drivers/src/fs/: ext2.rs  traits.rs
drivers/src/fs/ext2/: inner.rs  structs.rs  tests.rs
drivers/src/fs/ext2/structs/: block_group.rs  inode.rs  superblock.rs
kernel/: Cargo.toml
kernel/src/: allocator.rs  frame_buffer.rs  heap.rs  init.rs  interrupts.rs  lib.rs  macros.rs  main.rs  memory.rs  panic.rs  serial.rs  task.rs  test.rs
kernel/src/drivers/fs/: traits.rs
kernel/src/drivers/fs/ext2/: inner.rs
kernel/src/drivers/fs/ext2/structs/: block.rs  block_group_descriptor.rs  block_group_descriptor_table.rs  directory_entry.rs  superblock.rs
kernel/src/frame_buffer/: init.rs  macros.rs  writer.rs
kernel/src/gdt/: inner.rs  tss.rs
kernel/src/heap/: constants.rs  init.rs
kernel/src/interrupts/: handlers.rs  idt.rs  pics.rs
kernel/src/interrupts/handlers/: breakpoint.rs  double_fault.rs  keyboard_interrupt.rs  page_fault.rs  timer_interrupt.rs
kernel/src/memory/: frame_allocator.rs  init.rs
kernel/src/task/: inner.rs
kernel/src/test/: panic.rs  traits.rs
kernel/src/vga_buffer/: macros.rs  tests.rs  writer.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
src/: gdt.rs  init.rs  lib.rs  main.rs  memory.rs  panic.rs  serial.rs  test.rs  utils.rs  vga_buffer.rs
tests/: basic_boot.rs  heap_allocation.rs  (+1 more)
(+41 files in other folders)
