[package]
name = "drivers"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11"
bitflags = "2.9.0"
encoding_rs = "0.8.35"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
noto-sans-mono-bitmap = "0.3.1"
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.14.2"

# Local crates
utils = { path = "../utils" }
