[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["Dimitri Chaline <dimitri@mayze.xyz>"]

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
bitflags = "2.9.0"
bootloader_api = "0.11"
encoding_rs = "0.8.35"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
linked_list_allocator = "0.9.0"
noto-sans-mono-bitmap = "0.3.1"
pc-keyboard = "0.7.0"
pic8259 = "0.10.1"
spin = "0.5.2"
time = { version = "0.3.39", features = [
	"alloc",
	"macros",
], default-features = false }
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"

[[test]]
name = "stack_overflow"
harness = false
